# PicoEpaper

./: CMakeLists.txt  logo.h  main.cpp  readme.md
lib/: CMakeLists.txt
lib/ePaper/: CMakeLists.txt  epdspi.cpp  epdspi.h  gdey027T91.cpp  gdey027T91.h
